<resources>
    <string name="app_name">AppaTas</string>

    <!-- menu bottom navigation view -->
    <string name="menu_home">Inicio</string>
    <string name="menu_localizado">Localizado</string>
    <string name="menu_encontrar">Encontrar</string>
    <string name="menu_mascota">Mi Mascota</string>
    <string name="menu_perfil">Perfil</string>

    <!-- menu perfil del usuario -->
    <string name="menu_perfil_edit">Editar</string>
    <string name="menu_perfil_eliminar">Eliminar</string>
    <string name="menu_perfil_salir">Cerrar Sesion</string>

    <!-- login -->
    <string name="bienvenido">Bienvenid@</string>
    <string name="user">Usuario</string>
    <string name="password">Contraseña</string>
    <string name="login">Iniciar Sesión</string>

    <string name="formato_fecha">dd/mm/yyyy</string>
    <string name="title_activity_mapa">Map</string>

    <!-- menu creacion del publicacion -->
    <string name="menu_publicar_editar">Editar</string>
    <string name="menu_publicar_eliminar">Eliminar</string>

    <string name="menu_acceder_camara">Cámara</string>
    <string name="menu_acceder_galeria">Galería</string>
    <!-- login Facebook-->

    <string name="fb_login_protocol_scheme">fb2386524528285474</string>
    <string name="facebook_app_id">2386524528285474</string>
    <string-array name="sexo_mascota">
        <item>Macho</item>
        <item>Hembra</item>
    </string-array>

    <string-array name="edad_mascota">
        <item>cachorro</item>
        <item>joven</item>
        <item>adulto</item>
    </string-array>

    <string-array name="color_mascota">
        <item>cafe</item>
        <item>negro</item>
        <item>blanco</item>
    </string-array>

    <string-array name="tamano_mascota">
        <item>pequeño</item>
        <item>mediano</item>
        <item>grande</item>
    </string-array>

    <string-array name="peso_mascota">
        <item>1 kg</item>
        <item>2 kg</item>
        <item>3 kg</item>
        <item>4 kg</item>
        <item>5 kg</item>
        <item>6 kg</item>
        <item>7 kg</item>
        <item>8 kg</item>
        <item>9 kg</item>
        <item>10 kg</item>
        <item>11 kg</item>
        <item>12 kg</item>
        <item>13 kg</item>
        <item>14 kg</item>
        <item>15 kg</item>
        <item>16 kg</item>
        <item>17 kg</item>
        <item>18 kg</item>
        <item>19 kg</item>
        <item>20 kg</item>
    </string-array>


</resources>
