<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <item android:id="@+id/menu_home"
        android:icon="@drawable/ic_menu_home"
        android:title="@string/menu_home">

    </item>

    <item android:id="@+id/menu_localizado"
        android:icon="@drawable/ic_menu_localizado"
        android:title="@string/menu_localizado">

    </item>

    <item android:id="@+id/menu_encontrar"
        android:icon="@drawable/ic_menu_encontrar"
        android:title="@string/menu_encontrar">

    </item>

    <item android:id="@+id/menu_mascota"
        android:icon="@drawable/ic_menu_mascota"
        android:title="@string/menu_mascota">

    </item>

    <item android:id="@+id/menu_perfil"
        android:icon="@drawable/ic_menu_perfil"
        android:title="@string/menu_perfil">

    </item>

</menu>